@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 06-11-2004 changed: Some strings from cd+g support changed for better translation
   - 06-11-2004 fixed ttf font .srt subtitle lockup issue
   - 06-11-2004 changed: CD+G support updated (Thnx to stcogolin)
   - 06-11-2004 moved: Random slideshow button to My Pictures (from settings)
